# pacperpus

./: .gitignore  README.md  pyproject.toml
cli/: __main__.py  book.py
dataset/: authors.csv  book_category.csv  categories.csv  dump.sql  publishers.csv
